<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="exit">Выйти</string>
    <string name="unknown_error_message">Что-то пошло не так, попробуйте позже</string>
    <string name="movie_search">Поиск фильмов</string>
    <string name="movies">Фильмы</string>
    <string name="favorite">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="movies_not_found">По вашему запросу ничего не найдено :(</string>
    <string name="original_title_with_date">%1$s (%2$s)</string>
    <string name="random_movie_overview">
        Семь лет назад доктор Дулиттл, прославленный врач-ветеринар, живущий в викторианской Англии, потерял свою жену. Теперь он ведет затворнический образ жизни, скрывшись за высокими стенами своего поместья. Экзотические животные из его коллекции — его единственная компания.\n\nНо когда неизвестная болезнь становится угрозой для жизни юной королевы, доктору Дулиттлу приходится покинуть свое убежище и отправиться в невероятное путешествие к мифическому острову. В поисках лекарства для королевы он вступит в схватку с беспощадными врагами, познакомится с диковинными существами и будет вынужден проявить недюжинное мужество и смекалку.
    </string>
    <string name="duration_header">Время</string>
    <string name="rating_header">Рейтинг фильма</string>
    <string name="minutes">мин</string>

    <string name="transition_movie_image">movie_image_%1$s</string>
    <string name="transition_movie_title">movie_title_%1$s</string>
    <string name="transition_movie_original_title_with_year">movie_original_title_with_year_%1$s</string>
    <string name="transition_movie_genres">movie_genres_%1$s</string>
    <string name="transition_movie_duration">movie_duration_%1$s</string>
    <string name="transition_movie_duration_description">movie_duration_description_%1$s</string>
    <string name="transition_movie_vote_average">movie_duration_vote_average_%1$s</string>
    <string name="transition_movie_vote_count">movie_duration_vote_count_%1$s</string>

    <string name="menu_favorite">Добавить в избранное</string>
    <string name="back_button_description">Назад</string>
    <string name="menu_search_icon">Поиск</string>
    <string name="menu_list_type">Вид отображения</string>
    <string name="favorite_header">Избранное</string>
    <string name="favorite_no_movies">Вы не добавили ни одного фильма</string>
    <string name="favorite_search_movies">Найти любимые фильмы</string>
</resources>